k8s/external-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: external-frontend
  name: external-frontend
  namespace: hermes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: external-frontend
    spec:
      containers:
        - env:
            - name: KEYCLOAK_AUTH_SERVER_URL
              value: https://sso.hermesapp.xyz/auth
            - name: HERMES_BACKEND_URL
              # URI is http://<service-name>.<namespace>.svc.cluster.local:<service-port>
              value: http://backend.hermes.svc.cluster.local:8080
            - name: KEYCLOAK_ADMIN_CLIENTID
              valueFrom:
                secretKeyRef:
                  name: external-frontend-env-secret
                  key: KEYCLOAK_ADMIN_CLIENTID
            - name: KEYCLOAK_ADMIN_CLIENTSECRET
              valueFrom:
                secretKeyRef:
                  name: external-frontend-env-secret
                  key: KEYCLOAK_ADMIN_CLIENTSECRET
            - name: KEYCLOAK_CREDENTIALS_SECRET
              valueFrom:
                secretKeyRef:
                  name: external-frontend-env-secret
                  key: KEYCLOAK_CREDENTIALS_SECRET
          image: europe-west2-docker.pkg.dev/hua-hermes/external-front-end/prod
          name: hermes-external-frontend
          ports:
            - containerPort: 8083
            - containerPort: 9001
          resources: {}
      restartPolicy: Always
