k8s/external-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: external-frontend
  name: external-frontend
  namespace: hermes
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    app: external-frontend
