k8s/external-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-frontend-ingress
  namespace: hermes
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: secret-tls
  rules:
    - host: "external.hermesapp.xyz"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: external-frontend
                port:
                  number: 8083
